# fraude_detection

./: .gitignore  README.md  data_dictionary.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: raw_data.dvc
notebooks/: 01_eda_corrected.ipynb
